--- a/templates/submission.html
+++ b/templates/submission.html
@@ -81,8 +81,7 @@
                 <th>Software Version</th>
                 <th>Condition</th>
                 <th>Serial</th>
-                <th>Model</th>
-                <th>Build</th>
+                <!--Changed-->
                 <th>Latitude</th>
                 <th>Longitude</th>
             </tr>
@@ -96,8 +95,6 @@
                 <td data-label="Software Version">{{ item.software_version }}</td>
                 <td data-label="Condition">{{ item.condition }}</td>
                 <td data-label="Serial">{{ item.serial }}</td>
-                <td data-label="Model">{{ item.model }}</td>
-                <td data-label="Build">{{ item.build }}</td>
                 <td data-label="Latitude">{{ item.latitude }}</td>
                 <td data-label="Longitude">{{ item.longitude }}</td>
             </tr>
