--- a/templates/device.html
+++ b/templates/device.html
@@ -124,8 +124,7 @@
                 <thead>
                     <tr>
                         <th>Timestamp</th>
-                        <th>Model</th>
-                        <th>Build</th>
+                        <!-- changed-->
                         <th>Username</th>
                         <th>School</th>
                         <th>Software Version</th>
@@ -139,8 +138,7 @@
                     {% for record in records %}
                     <tr>
                         <td>{{ record.timestamp }}</td>
-                        <td>{{ record.model }}</td>
-                        <td>{{ record.build }}</td>
+                        <!--changed-->
                         <td>{{ record.username }}</td>
                         <td>{{ record.school }}</td>
                         <td>{{ record.software_version }}</td>
